--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,3 +83,22 @@ input:-webkit-autofill:focus {
     scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
   }
 }
+.customScrollH::-webkit-scrollbar {
+  height: var(--sb-size);
+}
+
+.customScrollH::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 50px;
+}
+
+.customScrollH::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 50px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  .customScrollH {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
+}
